Use a 4gb heap to speed up Travis CI builds