@@ -8,5 +8,6 @@
   -Porg.librarysimplified.keyPassword=${NYPL_SIGNING_KEY_PASSWORD} \
   -Porg.librarysimplified.storePassword=${NYPL_SIGNING_STORE_PASSWORD} \
   -Porg.gradle.parallel=false \
-  -Porg.gradle.configureondemand=true
+  -Porg.gradle.configureondemand=true \
+  -Porg.gradle.jvmargs="-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError"
 
